--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
         <module>rookie-javase-thread</module>
     </modules>
     <packaging>pom</packaging>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 </project>
