--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>rookie-javase-thread</module>
+        <module>rookie-javase-jvm</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
