--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>rookie-javase-design</module>
         <module>rookie-javase-other</module>
         <module>rookie-leetcode-java</module>-->
+        <module>rookie-javase</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
