--- a/rookie-javase/pom.xml
+++ b/rookie-javase/pom.xml
@@ -32,6 +32,12 @@
   <!--    <scope>test</scope>-->
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.3.12</version>
+    </dependency>
+
   </dependencies>
 
   <build>
