--- a/rookie-javase/pom.xml
+++ b/rookie-javase/pom.xml
@@ -37,6 +37,12 @@
       <artifactId>spring-core</artifactId>
       <version>5.3.12</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.0.1-jre</version>
+    </dependency>
 
   </dependencies>
 
