--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>rookie-javase-other</module>
         <module>rookie-leetcode-java</module>-->
         <module>rookie-javase</module>
+        <module>rookie-tomcat</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
