--- a/rookie-log/rookie-log4j/src/main/resources/log4j.properties
+++ b/rookie-log/rookie-log4j/src/main/resources/log4j.properties
@@ -1,24 +1,61 @@
-### \u8BBE\u7F6E###
-log4j.rootLogger = debug,stdout,D,E
+#####################################\u8F93\u51FA\u65E5\u5FD7\u5230\u63A7\u5236\u53F0test2###################################################
+##\u7B2C\u4E00\u4E2A\u53C2\u6570\u4E3A\u65E5\u5FD7\u7B49\u7EA7\uFF0C\u7B2C\u4E8C\u4E2A\u53C2\u6570\u4E3A\u6307\u5B9A\u7684appender
+#log4j.rootLogger=debug,console
+#
+#
+#log4j.com.rookie.bigdata.level=info
+#log4j.appender.console=org.apache.log4j.ConsoleAppender
+##\u8F93\u51FA\u65E5\u5FD7\u7684\u683C\u5F0F\u5373\u5E03\u5C40
+#log4j.appender.console.layout = org.apache.log4j.PatternLayout
+##\u81EA\u5B9A\u4E49\u65E5\u5FD7\u683C\u5F0F\uFF0C\u5373\u63A7\u5236\u53F0\u8F93\u51FA\u7684\u65E5\u5FD7\u683C\u5F0F
+#log4j.appender.console.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+#
+##\u6309\u7167\u7EA7\u522B\u8F93\u51FA\u65E5\u5FD7\uFF0C\u5927\u4E8E\u8BE5\u7EA7\u522B\u7684\u65E5\u5FD7\u4F1A\u8FDB\u884C\u8F93\u51FA
+#log4j.appender.console.threshold=info
 
-### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
-log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+#JDBC log
+log4j.rootLogger=INFO,LOGDB
 
-### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
-log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log.log
-log4j.appender.D.Append = true
-log4j.appender.D.Threshold = DEBUG 
-log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+#JDBCAppender \u5B58\u50A8\u5230\u6570\u636E\u5E93\u4E2D
 
-### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
-log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/error.log 
-log4j.appender.E.Append = true
-log4j.appender.E.Threshold = ERROR 
-log4j.appender.E.layout = org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#### \u8BBE\u7F6E###
+#log4j.rootLogger = debug,stdout,D,E
+#
+#### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
+#log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.Target = System.out
+#log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+#
+#### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
+#log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.D.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log.log
+#log4j.appender.D.Append = true
+#log4j.appender.D.Threshold = DEBUG
+#log4j.appender.D.layout = org.apache.log4j.PatternLayout
+#log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+#
+#### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
+#log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.E.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/error.log
+#log4j.appender.E.Append = true
+#log4j.appender.E.Threshold = ERROR
+#log4j.appender.E.layout = org.apache.log4j.PatternLayout
+#log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
