--- a/rookie-log/pom.xml
+++ b/rookie-log/pom.xml
@@ -21,4 +21,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+
+    </dependencies>
+
+
 </project>
