--- a/rookie-log/rookie-log4j/src/main/resources/log4j.properties
+++ b/rookie-log/rookie-log4j/src/main/resources/log4j.properties
@@ -12,50 +12,98 @@
 #
 ##\u6309\u7167\u7EA7\u522B\u8F93\u51FA\u65E5\u5FD7\uFF0C\u5927\u4E8E\u8BE5\u7EA7\u522B\u7684\u65E5\u5FD7\u4F1A\u8FDB\u884C\u8F93\u51FA
 #log4j.appender.console.threshold=info
-
-#JDBC log
-log4j.rootLogger=INFO,LOGDB
-
-#JDBCAppender \u5B58\u50A8\u5230\u6570\u636E\u5E93\u4E2D
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#### \u8BBE\u7F6E###
-#log4j.rootLogger = debug,stdout,D,E
 #
-#### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
-#log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target = System.out
-#log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+#######################################\u8F93\u51FA\u65E5\u5FD7\u5230\u63A7\u5236\u53F0test3###################################################
+##JDBC log
+#log4j.rootLogger=INFO,LOGDB
 #
-#### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
-#log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.D.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log.log
-#log4j.appender.D.Append = true
-#log4j.appender.D.Threshold = DEBUG
-#log4j.appender.D.layout = org.apache.log4j.PatternLayout
-#log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+##JDBCAppender \u5B58\u50A8\u5230\u6570\u636E\u5E93\u4E2D
+#log4j.appender.LOGDB=org.apache.log4j.jdbc.JDBCAppender
+#log4j.appender.LOGDB.layout = org.apache.log4j.PatternLayout
+#log4j.appender.LOGDB.Driver=com.mysql.jdbc.Driver
+#log4j.appender.LOGDB.URL=jdbc:mysql://localhost:3306/test
+#log4j.appender.LOGDB.User=root
+#log4j.appender.LOGDB.Password=root
+#log4j.appender.LOGDB.Sql=INSERT INTO log(project_name,create_date,level,category,file_name,thread_name,line,all_category,message) values('log4jtest','%d{yyyy-MM-ddHH:mm:ss}','%p','%c','%F','%t','%L','%l','%m')
+
+
+########################################\u8F93\u51FA\u65E5\u5FD7\u5230\u6587\u4EF6test4###################################################
 #
-#### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
-#log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.E.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/error.log
-#log4j.appender.E.Append = true
-#log4j.appender.E.Threshold = ERROR
-#log4j.appender.E.layout = org.apache.log4j.PatternLayout
-#log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+#log4j.rootLogger = info,file
+## FileAppender
+#log4j.appender.file = org.apache.log4j.FileAppender
+#log4j.appender.file.file = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log/log.log
+#log4j.appender.file.encoding = UTF-8
+##  \u8BBE\u7F6E\u81EA\u5B9A\u4E49\u5E03\u5C40(\u81EA\u5B9A\u4E49\u8F93\u51FA\u683C\u5F0F)
+#log4j.appender.file.layout = org.apache.log4j.PatternLayout
+#log4j.appender.file.layout.ConversionPattern= [%-5p]%r %l %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+
+
+
+#########################################\u8F93\u51FA\u65E5\u5FD7\u5230\u6587\u4EF6test5###################################################
+#
+#
+## \u65E5\u5FD7\u7B49\u7EA7\u4E3Ainfo\uFF0C\u6307\u5B9Aappender\u4E3A\u4E0B\u9762\u4EE5roll\u4F5C\u4E3A\u522B\u540D\u7684
+#log4j.rootLogger = info,rollFile
+## DailyRollingFileAppender \u8F6E\u8BE2
+#log4j.appender.rollFile = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.rollFile.file = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log/log.log
+#log4j.appender.rollFile.encoding = UTF-8
+## datePattern\u6307\u7684\u662F\u6839\u636E\u5206\u949F\u6765\u8FDB\u884C\u8F6E\u8BE2 =\u300B\u53EF\u8BBE\u7F6E\u5E74\u6708\u65E5\u65F6\u5206\u79D2\u6BEB\u79D2\u5982\u53F3\uFF1A '.'yyyy-MM-dd-HH-mm-ss-SSS
+#log4j.appender.rollFile.datePattern = '.'yyyy-MM-dd-HH-mm
+##  \u8BBE\u7F6E\u81EA\u5B9A\u4E49\u5E03\u5C40(\u81EA\u5B9A\u4E49\u8F93\u51FA\u683C\u5F0F)
+#log4j.appender.rollFile.layout = org.apache.log4j.PatternLayout
+#log4j.appender.rollFile.layout.ConversionPattern= [%-5p]%r %l %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+
+#
+##########################################\u8F93\u51FA\u65E5\u5FD7\u5230\u6587\u4EF6test6###################################################
+## \u65E5\u5FD7\u7B49\u7EA7\u4E3Ainfo\uFF0C\u6307\u5B9Aappender\u4E3A\u4E0B\u9762\u4EE5rollfile\u4F5C\u4E3A\u522B\u540D\u7684#
+#log4j.rootLogger = info,rollFile
+## RollingFileAppender
+#log4j.appender.rollFile = org.apache.log4j.RollingFileAppender
+#log4j.appender.rollFile.file =  C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log/log.log
+#log4j.appender.rollFile.encoding = UTF-8
+## \u8BBE\u7F6E\u5355\u4E2A\u6587\u4EF6\u6700\u5927\u5BB9\u91CF(KB\u3001MB\u3001GB,\u5176\u4ED6\u5355\u4F4D\u9ED8\u8BA4\u4F20\u4E3A10MB+1)\u4EE5\u53CA\u6700\u5927\u6587\u4EF6\u4E2A\u6570
+#log4j.appender.rollFile.maxFileSize = 1MB
+#log4j.appender.rollFile.maxBackupIndex = 5
+##  \u8BBE\u7F6E\u81EA\u5B9A\u4E49\u5E03\u5C40(\u81EA\u5B9A\u4E49\u8F93\u51FA\u683C\u5F0F)
+#log4j.appender.rollFile.layout = org.apache.log4j.PatternLayout
+#log4j.appender.rollFile.layout.ConversionPattern= [%-5p]%r %l %d{yyyy-MM-dd HH:mm:ss:SSS} %m%n
+
+
+
+
+
+#######################################\u81EA\u5B9A\u4E49logger###############################################
+### root logger\u7684\u65E5\u5FD7\u5168\u90E8\u8F93\u51FA\u5230\u63A7\u5236\u53F0\u4E2D
+log4j.rootLogger = debug,stdout
+
+### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+
+#\u81EA\u5B9A\u4E49\u7684logger\u5168\u90E8\u8F93\u51FA\u5230\u65E5\u5FD7\u6587\u4EF6\u4E2D
+log4j.logger.com.rookie.bigdata = info,D,E
+
+
+### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
+log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.D.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/log.log
+log4j.appender.D.Append = true
+log4j.appender.D.Threshold = DEBUG
+log4j.appender.D.layout = org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+### \u8F93\u51FAERROR \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
+log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.E.File = C:/work/IDEAWorkSpace/rookie-project/haizhilangzigithub/rookies-javases/rookie-log/rookie-log4j/src/main/resources/error.log
+log4j.appender.E.Append = true
+log4j.appender.E.Threshold = ERROR
+log4j.appender.E.layout = org.apache.log4j.PatternLayout
+log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+
