--- a/rookie-log/rookie-log-jcl/pom.xml
+++ b/rookie-log/rookie-log-jcl/pom.xml
@@ -10,12 +10,11 @@
     <groupId>com.rookie.bigdata</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
-<!--  <groupId>com.rookie.bigdata</groupId>-->
-  <artifactId>rookie-log4j</artifactId>
+ <!-- <groupId>com.rookie.bigdata</groupId>-->
+  <artifactId>rookie-log-jcl</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>rookie-log4j</name>
+  <name>rookie-log-jcl</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -30,34 +29,13 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-<!--      <scope>test</scope>-->
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.32</version>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.2</version>
     </dependency>
-
-
-    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-<!--    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.17.1</version>
-    </dependency>-->
-    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-<!--    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.17.1</version>
-    </dependency>-->
-
 
   </dependencies>
 
